Removed tokenTool and turboDive
